--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3.v4.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3.v4.min.js" as="script"></script>
-  <script rel="preconnect" src="https://d3js.org/d3-scale.v3.min.js" as="script" crossorigin></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+   <!--  <script rel="preconnect" src="https://d3js.org/d3-scale.v3.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3-scale.v3.min.js"></script>
   <script rel="preconnect" src="https://d3js.org/d3-axis.v2.min.js" as="script" crossorigin></script>
-  <script rel="dns-prefetch" src="https://d3js.org/d3-axis.v2.min.js" as="script"></script>
+  <script rel="dns-prefetch" src="https://d3js.org/d3-axis.v2.min.js" as="script"></script> -->
   <script rel="preconnect" src="https://d3js.org/d3-dsv.v2.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3-dsv.v2.min.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3-fetch.v2.min.js" as="script" crossorigin></script>
