--- a/index.html
+++ b/index.html
@@ -2163,16 +2163,17 @@
 <section class="tab-content">
   <div id="tab-1-content" class="tab-content-item show">
       <div id="pfizer1"></div>
-      <div id="pfizer2">
+    <div>
+      <div id="pfizer2"></div>
         <form>
         <fieldset>
         <legend>US States</legend>
         <!-- <button id="button" class="autocompare">Reset</button> -->
-        <select id="selectButton">
-          <option id="button4">United States</option>
-          <option id="button3">India</option>
-          <option id="button2">Russia</option>
-          <option id="button1">Canada</option>
+        <select class="selectButton">
+          <option>United States</option>
+          <option>India</option>
+          <option>Russia</option>
+          <option>Canada</option>
         </select>  
         </fieldset>
         </form>
@@ -2183,14 +2184,42 @@
 <section class="tab-content">
   <div id="tab-2-content" class="tab-content-item">
       <div id="moderna1"></div>
+    <div>
       <div id="moderna2"></div>
+        <form>
+        <fieldset>
+        <legend>US States</legend>
+        <!-- <button id="button" class="autocompare">Reset</button> -->
+        <select class="selectButton">
+          <option>United States</option>
+          <option>India</option>
+          <option>Russia</option>
+          <option>Canada</option>
+        </select>  
+        </fieldset>
+        </form>
+      </div>
   </div> 
 </section>
 
 <section class="tab-content">
   <div id="tab-3-content" class="tab-content-item">
       <div id="jessen1"></div>
-      <div id="jessen2"></div>  
+    <div>
+      <div id="jessen2"></div>
+        <form>
+        <fieldset>
+        <legend>US States</legend>
+        <!-- <button id="button" class="autocompare">Reset</button> -->
+        <select class="selectButton">
+          <option>United States</option>
+          <option>India</option>
+          <option>Russia</option>
+          <option>Canada</option>
+        </select>  
+        </fieldset>
+        </form>
+      </div>
   </div>
 </section>
     
