--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
   </div> -->
  </section>
     
+<section class="tabs">
+  <div class="info-title">
+    <p>Data Sources</p>
+  </div> 
+  <div class="vac-boxes">
+    <div id="source-tab-1" class="vacbox tab-item tab-border">
+      <p>John Hopkins University</p>
+    </div>
+    <div id="source-tab-2" class="vacbox tab-item">
+      <p>New York Times</p>
+    </div>
+    <div id="source-tab-3" class="vacbox tab-item">
+      <p>COVID Tracking Project</p>
+    </div>
+    </div>
+</section>     
+    
 <!-- Info Section -->
  <section class="info">
   <div class="Tabular-data">
@@ -2169,7 +2186,7 @@
         <fieldset>
         <legend>US States</legend>
         <!-- <button id="button" class="autocompare">Reset</button> -->
-        <select class="selectButton">
+        <select id="selectButton" class="selectButton">
           <option>United States</option>
           <option>India</option>
           <option>Russia</option>
@@ -2190,7 +2207,7 @@
         <fieldset>
         <legend>US States</legend>
         <!-- <button id="button" class="autocompare">Reset</button> -->
-        <select class="selectButton">
+        <select id="selectButton2" class="selectButton">
           <option>United States</option>
           <option>India</option>
           <option>Russia</option>
@@ -2211,7 +2228,7 @@
         <fieldset>
         <legend>US States</legend>
         <!-- <button id="button" class="autocompare">Reset</button> -->
-        <select class="selectButton">
+        <select id="selectButton3" class="selectButton">
           <option>United States</option>
           <option>India</option>
           <option>Russia</option>
