--- a/index.html
+++ b/index.html
@@ -5734,7 +5734,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
-   </div>        
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Mechanical transmission of SARS-CoV-2 by house flies</h3>
+     <p class="price">Source: BioMedCentral (BMC), Published on April 20, 2021</p>
+     <a href="https://doi.org/10.1186/s13071-021-04703-8" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>    
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Scientist who helped develop Pfizer-BioNTech Covid vaccine agrees third shot is needed as immunity wanes</h3>
@@ -5968,7 +5978,7 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
-   </div>        
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Burning Man mulling mandatory COVID-19 vaccines for August</h3>
@@ -6532,6 +6542,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Single‐cell analyses reveal SARS‐CoV‐2 interference with intrinsic immune response in the human gut</h3>
+     <p class="price">Source: Embo Press, Published on April 27, 2021</p>
+     <a href="https://doi.org/10.15252/msb.202110232" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>A guideline to limit indoor airborne transmission of COVID-19</h3>
