--- a/index.html
+++ b/index.html
@@ -6604,9 +6604,39 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>COVID-19-associated coagulopathy and antithrombotic agents—lessons after 1 year</h3>
+     <p class="price">Source: Lancet, Published on April 27, 2021</p>
+     <a href="https://doi.org/10.1016/S2352-3026(21)00105-8" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>SARS-CoV-2 antibody-positivity protects against reinfection for at least seven months with 95% efficacy</h3>
      <p class="price">Source: Lancet, Published on April 27, 2021</p>
      <a href="https://doi.org/10.1016/j.eclinm.2021.100861" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Vaccine side-effects and SARS-CoV-2 infection after vaccination in users of the COVID Symptom Study app in the UK: a prospective observational study</h3>
+     <p class="price">Source: Lancet, Published on April 27, 2021</p>
+     <a href="https://doi.org/10.1016/S1473-3099(21)00224-3" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Effectiveness of Pfizer-BioNTech and Moderna Vaccines Against COVID-19 Among Hospitalized Adults Aged ≥65 Years — United States, January–March 2021</h3>
+     <p class="price">Source: Center for Disease Control and Prevention (CDC), Published on April 28, 2021</p>
+     <a href="http://dx.doi.org/10.15585/mmwr.mm7018e1" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
