--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </section>     
     
 <!-- Info Section -->
-<section class="tab-content">
+<section class="tab-content info">
   <div id="source-tab-1-content" class="datatab-content-item show">
     <p>Test1</p>
   </div>
@@ -2127,7 +2127,7 @@
     </div>
 </section> 
 
-<section class="tab-content">
+<section class="tab-content info">
   <div id="tab-1-content" class="tab-content-item show">
       <div id="pfizer1"></div>
     <div>
@@ -6763,6 +6763,5 @@
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/d3.v6.min.js"></script> 
-<script src="js/d3.tip.v0.6.3.js"></script> 
 </body>
 </html>
