--- a/covidnews.html
+++ b/covidnews.html
@@ -4014,6 +4014,16 @@
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Early rate reductions of SARS-CoV-2 infection and COVID-19 in BNT162b2 vaccine recipients</h3>
+     <p class="price">Source: Lancet, Published on February 19, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)00448-7" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Pandemic's mental health burden heaviest among young adults</h3>
      <p class="price">Source: ABC News, Published on February 21, 2021</p>
      <a href="https://abcnews.go.com/Health/pandemics-mental-health-burden-heaviest-young-adults/story?id=75811308" class="btn">Link to Article</a>
