--- a/covidnews.html
+++ b/covidnews.html
@@ -1732,6 +1732,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Persistence of SARS-CoV-2 in the first trimester placenta leading to transplacental transmission and fetal demise from an asymptomatic mother</h3>
+     <p class="price">Source: Oxford Academics, Published on December 21, 2020</p>
+     <a href="https://doi.org/10.1093/humrep/deaa367" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>High frequency of cerebrospinal fluid autoantibodies in COVID-19 patients with neurological symptoms</h3>
      <p class="price">Source: Science Direct, Published on December 24, 2021</p>
      <a href="https://doi.org/10.1016/j.bbi.2020.12.022" class="btn">Link to Research Article</a>
@@ -1997,6 +2007,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The incubation period of COVID-19: A meta-analysis</h3>
+     <p class="price">Source: Internation Journal of Infectious Diseases, Published on February 2, 2021</p>
+     <a href="https://doi.org/10.1016/j.ijid.2021.01.069" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Hospitals In Japan Are Overwhelmed By COVID-19 Surge</h3>
@@ -6006,6 +6026,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Intestinal Host Response to SARS-CoV-2 Infection and COVID-19 Outcomes in Patients With Gastrointestinal Symptoms</h3>
+     <p class="price">Source: American Gastroenterological Association, Published on March 4, 2021</p>
+     <a href="https://doi.org/10.1053/j.gastro.2021.02.056" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>NIH-Sponsored ACTIV-3 Clinical Trial Closes Enrollment into Two Sub-Studies</h3>
