--- a/index.html
+++ b/index.html
@@ -7148,6 +7148,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Novavax Initiates Pediatric Expansion for Phase 3 Clinical Trial of COVID-19 Vaccine</h3>
+     <p class="price">Source: Novavax, Published on May 3, 2021</p>
+     <a href="https://ir.novavax.com/news-releases/news-release-details/novavax-initiates-pediatric-expansion-phase-3-clinical-trial" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
