--- a/index.html
+++ b/index.html
@@ -2161,19 +2161,19 @@
     
 <!-- Vaccine Box Section -->
 <section class="vac-container">
-<div class="box">
+<div class="box top-box-a">
    <h2>Fully Vaccinated with Pfizer/BioNTech(2-dose), Moderna(2-dose), Johnson & Johnson/Janssen(1 dose): Updated by CDC</h2>
    <h3><strong><span style="color:green" class="vac-num">Loading...</strong></span></h3>
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
 </div> 
  <section class="boxes">
-  <div class="box">
+  <div class="box top-box-b">
    <i class="fas fa-route fa-4x"></i>
    <h2>Distributed Vaccines: Updated by CDC</h2>
    <h3><strong><span style="color:green" class="distribute-num">Loading...</strong></span></h3>
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
-  <div class="box">
+  <div class="box top-box-c">
    <i class="fas fa-syringe fa-4x"></i>
    <h2>Administerd Vaccines: Updated by CDC</h2>
    <h3><strong><span style="color:green" class="administer-num">Loading...</strong></span></h3> 
@@ -2181,11 +2181,7 @@
   </div>
  </section>
 </section>  
-
-<section>
-  <div></div>
-</section>  
-
+ 
 <section>
   <div class="info-title">
     <p>COVID-19 Infographics</p>
