--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
    <!--  <script rel="preconnect" src="https://d3js.org/d3-scale.v3.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3-scale.v3.min.js"></script>
   <script rel="preconnect" src="https://d3js.org/d3-axis.v2.min.js" as="script" crossorigin></script>
-  <script rel="dns-prefetch" src="https://d3js.org/d3-axis.v2.min.js" as="script"></script> -->
+  <script rel="dns-prefetch" src="https://d3js.org/d3-axis.v2.min.js" as="script"></script> 
   <script rel="preconnect" src="https://d3js.org/d3-dsv.v2.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3-dsv.v2.min.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3-fetch.v2.min.js" as="script" crossorigin></script>
-  <script rel="dns-prefetch" src="https://d3js.org/d3-fetch.v2.min.js" as="script"></script>
+  <script rel="dns-prefetch" src="https://d3js.org/d3-fetch.v2.min.js" as="script"></script> -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
@@ -219,8 +219,8 @@
 </section>    
     
 <section class="info">
-  <div class="info-title">
-    <p>COVID-19 Infographics</p>
+  <div>
+    <h1>COVID-19 Infographics</h1>
   </div> 
     <div class="swiper-container swiper-infograph">
     <div class="swiper-wrapper">
@@ -5564,6 +5564,22 @@
    </table>
 <div class="price">John Hopkins University Charts
  <div class="us-johnhopkins-chart">
+    <div>
+    <div id="test2"></div>
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <!-- <button id="button" class="autocompare">Reset</button> -->
+    <select id="selectButton6">
+       <option>United States</option>
+       <option>India</option>
+       <option>Russia</option>
+       <option>Canada</option>
+    </select>  
+    </fieldset>
+    </form>
+  </div>
+  <div>
    <div class="us-johnhopkins-totaluschart"></div>
     <div> 
     <div class="us-johnhopkins-casestatechart"></div>  
@@ -7231,10 +7247,10 @@
 <!-- Wrapper End -->  
                                             
 <!-- Footer -->
- <footer class="footer">
+ <div class="footer">
   <p>Eric Nguyen Projects &copy; 2020</p>
   <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
-</footer>
+</div>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
 <script defer src="js/swiperaction.js"></script>
