--- a/index.html
+++ b/index.html
@@ -2219,6 +2219,16 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>The lockdown effect: A counterfactual for Sweden</h3>
+     <p class="price">Source: PNAS, Published on April 8, 2021</p>
+     <a href="https://doi.org/10.1371/journal.pone.0249732" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>High-throughput, single-copy sequencing reveals SARS-CoV-2 spike variants coincident with mounting humoral immunity during acute COVID-19</h3>
      <p class="price">Source: PLOS Pathogen, Published on April 8, 2021</p>
      <a href="https://doi.org/10.1371/journal.ppat.1009431" class="btn">Link to Article</a>
@@ -4777,6 +4787,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Unexpected tumor reduction in metastatic colorectal cancer patients during SARS-Cov-2 infection </h3>
+     <p class="price">Source: Sage Journal, Published on April 29, 2021</p>
+     <a href="https://doi.org/10.1177%2F17588359211011455" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>COVID-19 tissue atlases reveal SARS-CoV-2 pathology and cellular targets</h3>
      <p class="price">Source: Nature, Published on April 29, 2021</p>
      <a href="https://doi.org/10.1038/s41586-021-03570-8" class="btn">Link to Article</a>
@@ -5235,7 +5255,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Dietary and Protective Factors to Halt or Mitigate Progression of Autoimmunity, COVID-19 and Its Associated Metabolic Diseases</h3>
+     <p class="price">Source: International Journal of Molecular Science, Accessed on May 4, 2021</p>
+     <a href="https://dx.doi.org/10.3390%2Fijms22063134" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The COVID-19 anxiety syndrome scale: Development and psychometric properties</h3>
+     <p class="price">Source: US Natinoal Library of Medicine, Accessed on May 4, 2021</p>
+     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7375349/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>The impact of social distancing on COVID-19 infections and deaths</h3>
@@ -5245,7 +5285,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Testing at scale during the COVID-19 pandemic</h3>
+     <p class="price">Source: Nature, Published on May 4, 2021</p>
+     <a href="https://doi.org/10.1038/s41576-021-00360-w" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
