--- a/index.html
+++ b/index.html
@@ -5108,6 +5108,16 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>COVID-19-related anosmia is associated with viral persistence and inflammation in human olfactory epithelium and brain infections in hamsters</h3>
+     <p class="price">Source: Science Translational Medicine, Released on May 3, 2021</p>
+     <a href="img/article4.pdf" class="btn">View Study Article PDF</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Covid vaccine rollout rapidly gathering pace across Europe</h3>
      <p class="price">Source: Guardian, Published on May 3, 2021</p>
      <a href="https://www.theguardian.com/world/2021/may/03/covid-vaccine-rollout-rapidly-gathering-pace-across-europe" class="btn">Link to Article</a>
