--- a/index.html
+++ b/index.html
@@ -7378,7 +7378,9 @@
                                             
 <!-- Footer -->
  <div class="footer">
-  <p>Eric Nguyen Projects &copy; 2020</p>
+  <h1>Eric Nguyen Projects &copy; 2020</h1>
+  <i class="fas fa-skull-crossbones fa-4x"></i>
+  <h2>Your Digital Information is being collected</h2> 
   <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
 </div>
 
