--- a/index.html
+++ b/index.html
@@ -5375,7 +5375,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Longitudinal analysis of humoral immunity against SARS-CoV-2 Spike in convalescent individuals up to eight months post-symptom onset</h3>
+     <p class="price">Source: Cell, Published on May 4, 2021</p>
+     <a href="https://doi.org/10.1016/j.xcrm.2021.100290" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 related Paediatric Acute-onset Neuropsychiatric Syndrome</h3>
+     <p class="price">Source: Lancet, Published on May 4, 2021</p>
+     <a href="https://doi.org/10.1016/S2352-4642(21)00135-8" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>India is the home of the world’s biggest producer of Covid vaccines. But it’s facing a major internal shortage</h3>
