--- a/index.html
+++ b/index.html
@@ -4373,6 +4373,46 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Researchers Tie Severe Immunosuppression to Chronic COVID-19 and Virus Variants</h3>
+     <p class="price">Source: Jama Network, Published on May 5, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/fullarticle/2779850" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Impact and effectiveness of mRNA BNT162b2 vaccine against SARS-CoV-2 infections and COVID-19 cases, hospitalisations, and deaths following a nationwide vaccination campaign in Israel: an observational study using national surveillance data</h3>
+     <p class="price">Source: Lancet, Published on May 5, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)00947-8" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Efficacy of NVX-CoV2373 Covid-19 Vaccine against the B.1.351 Variant</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on May 5, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2103055" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>         
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Novavax and Gavi Execute Advance Purchase Agreement for COVID-19 Vaccine for COVAX Facility</h3>
+     <p class="price">Source: Novavax, Published on May 6, 2021</p>
+     <a href="https://ir.novavax.com/news-releases/news-release-details/novavax-and-gavi-execute-advance-purchase-agreement-covid-19" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
