--- a/covidnews.html
+++ b/covidnews.html
@@ -9738,6 +9738,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Culture Linked to Increasing Ageism during Covid-19: Evidence from a 10-billion-word Corpus across 20 Countries</h3>
+     <p class="price">Source: Oxford Academics, Published on March 31, 2021</p>
+     <a href="https://doi.org/10.1093/geronb/gbab057" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Single-Dose COVID-19 Nasal Vaccine Limits Infection in Monkeys</h3>
      <p class="price">Source: National Institute of Allergy and Infectious Diseases (NIH), Published on April 1, 2021</p>
      <a href="https://www.niaid.nih.gov/news-events/covid-19-nasal-vaccine" class="btn">Link to Article</a>
