--- a/index.html
+++ b/index.html
@@ -4863,6 +4863,16 @@
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Post-acute effects of SARS-CoV-2 infection in individuals not requiring hospital admission: a Danish population-based cohort study</h3>
+     <p class="price">Source: Lancet, Published on May 10, 2021</p>
+     <a href="https://doi.org/10.1016/S1473-3099(21)00211-5" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>McDonald’s and Uber to help encourage vaccine-hesitant Americans</h3>
      <p class="price">Source: Guardian, Published on May 11, 2021</p>
      <a href="https://www.theguardian.com/business/2021/may/11/mcdonalds-promote-vaccine-information" class="btn">Link to Article</a>
