--- a/covidnews.html
+++ b/covidnews.html
@@ -1508,6 +1508,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>False-negative results of initial RT-PCR assays for COVID-19: A systematic review</h3>
+     <p class="price">Source: PLOS, Published on December 10, 2020</p>
+     <a href="https://doi.org/10.1371/journal.pone.0242958" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>More Americans Have Died From Coronavirus Than in Combat During WWII </h3>
