--- a/covidnews.html
+++ b/covidnews.html
@@ -1578,6 +1578,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>COVID-19 Vaccines May Not Prevent Nasal SARS-CoV-2 Infection and Asymptomatic Transmission </h3>
+     <p class="price">Source: Sage Journals, Published on December 15, 2020</p>
+     <a href="https://doi.org/10.1177%2F0194599820982633" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Dr. Fauci says U.S. could return to normal by mid-fall if most people get Covid vaccine</h3>
