--- a/index.html
+++ b/index.html
@@ -419,6 +419,17 @@
    </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News Article</i> 
+     <h3>Interim Estimates of Vaccine Effectiveness of BNT162b2 and mRNA-1273 COVID-19 Vaccines in Preventing SARS-CoV-2 Infection Among Health Care Personnel, First Responders, and Other Essential and Frontline Workers — Eight U.S. Locations, December 2020–March 2021</h3>
+     <p class="price">Source: CDC, Published on April 2, 2021</p>
+     <a href="http://dx.doi.org/10.15585/mmwr.mm7013e3" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Antibody responses to the BNT162b2 mRNA vaccine in individuals previously infected with SARS-CoV-2</h3>
      <p class="price">Source: Nature, Published on April 2, 2021</p>
      <a href="https://doi.org/10.1038/s41591-021-01325-6" class="btn">Link to Article</a>
@@ -2415,6 +2426,16 @@
    </div>   
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Successful treatment of vaccine‐induced prothrombotic immune thrombocytopenia (VIPIT)</h3>
+     <p class="price">Source: Wiley Online Library, Published on April 20, 2021</p>
+     <a href="https://doi.org/10.1111/jth.15346" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Immunity after SARS-CoV-2 infections</h3>
      <p class="price">Source: Nature, Published on April 20, 2021</p>
      <a href="https://doi.org/10.1038/s41590-021-00923-3" class="btn">Link to Article</a>
@@ -4323,6 +4344,16 @@
    </div>  
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>The association of estimated cardiorespiratory fitness with COVID-19 incidence and mortality: A cohort study</h3>
+     <p class="price">Source: PLOS, Published on May 5, 2021</p>
+     <a href="https://doi.org/10.1371/journal.pone.0250508" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Mass cognitive test reveals COVID-19 impact on intellect</h3>
      <p class="price">Source: Science Museum Group, Published on May 5, 2021</p>
      <a href="https://www.sciencemuseumgroup.org.uk/blog/mass-cognitive-test-reveals-covid-19-impact-on-intellect/" class="btn">Link to Article</a>
@@ -4904,10 +4935,21 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
-     <i class="fas fa-exclamation-circle fa-4x">Media News</i> 
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
      <h3>Living, working and COVID-19 (Update April 2021): Mental health and trust decline across EU as pandemic enters another year</h3>
      <p class="price">Source: Eurofound, Published on May 10, 2021</p>
      <a href="https://www.eurofound.europa.eu/publications/report/2021/living-working-and-covid-19-update-april-2021" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>Recurrence of Upper Extremity Deep Vein Thrombosis Secondary to COVID-19</h3>
+     <p class="price">Source: MDPI, Published on May 11, 2021</p>
+     <a href="https://doi.org/10.3390/v13050878" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
@@ -5309,6 +5351,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>The 60-Year-Old Scientific Screwup That Helped Covid Kill</h3>
+     <p class="price">Source: Wired, Published on May 13, 2021</p>
+     <a href="https://www.wired.com/story/the-teeny-tiny-scientific-screwup-that-helped-covid-kill/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
@@ -5541,7 +5594,84 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
-
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Fake Covid vaccine and test certificate market is growing, researchers say</h3>
+     <p class="price">Source: Guardian, Published on May 16, 2021</p>
+     <a href="https://www.theguardian.com/world/2021/may/16/fake-covid-vaccine-and-test-certificate-market-is-growing-researchers-say" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Fauci says pandemic exposed 'undeniable effects of racism'</h3>
+     <p class="price">Source: NBC News, Published on May 16, 2021</p>
+     <a href="https://www.nbcnews.com/politics/politics-news/fauci-says-pandemic-exposed-undeniable-effects-racism-n1267530" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Tantrums of ‘terrible twos’ seen in much older children in pandemic</h3>
+     <p class="price">Source: Guardian, Published on May 16, 2021</p>
+     <a href="https://www.theguardian.com/society/2021/may/16/tantrums-of-terrible-twos-seen-in-much-older-children-in-pandemic" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Covid Is Airborne, Scientists Say. Now Authorities Think So, Too</h3>
+     <p class="price">Source: Guardian, Published on May 16, 2021</p>
+     <a href="https://www.bloomberg.com/news/articles/2021-05-16/covid-is-airborne-scientists-say-now-authorities-think-so-too" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Administration lifts mask mandate for vaccinated people on federal property</h3>
+     <p class="price">Source: Hill, Published on May 17, 2021</p>
+     <a href="https://thehill.com/homenews/administration/553876-biden-administration-lifts-mask-mandate-for-all-vaccinated-federal" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>Severe COVID-19 in people with type 1 and type 2 diabetes in Sweden: A nationwide retrospective cohort study</h3>
+     <p class="price">Source: Science Direct, Accessed on May 17, 2021</p>
+     <a href="https://www.sciencedirect.com/science/article/pii/S266677622100082X" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>More flexible storage conditions for BioNTech/Pfizer’s COVID-19 vaccine</h3>
+     <p class="price">Source: European Medicine Agency (EMA), Published on May 17, 2021</p>
+     <a href="https://www.ema.europa.eu/en/news/more-flexible-storage-conditions-biontechpfizers-covid-19-vaccine" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+  
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
