--- a/covidnews.html
+++ b/covidnews.html
@@ -2650,6 +2650,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Increased incidence of chalazion associated with face mask wear during the COVID-19 pandemic</h3>
+     <p class="price">Source: US National Library of Medicine, Published on February 9, 2021</p>
+     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7871812/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">    
     <div class="news-box news-box-a">
      <h3>Low Zinc Levels at Admission Associates with Poor Clinical Outcomes in SARS-CoV-2 Infection</h3>
