--- a/index.html
+++ b/index.html
@@ -5421,6 +5421,17 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>Mammalian enteral ventilation ameliorates respiratory failure</h3>
+     <p class="price">Source: Cell, Published on May 14, 2021</p>
+     <a href="https://doi.org/10.1016/j.medj.2021.04.004" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
      <h3>Changes in in-hospital mortality in the first wave of COVID-19: a multicentre prospective observational cohort study using the WHO Clinical Characterisation Protocol UK</h3>
      <p class="price">Source: Lancet, Published on May 14, 2021</p>
      <a href="https://doi.org/10.1016/S2213-2600(21)00175-2" class="btn">Link to Article</a>
@@ -5660,6 +5671,28 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Sanofi and GSK COVID-19 vaccine candidate demonstrates strong immune responses across all adult age groups in Phase 2 trial</h3>
+     <p class="price">Source: Sanofi, Published on May 17, 2021</p>
+     <a href="https://www.sanofi.com/en/media-room/press-releases/2021/2021-05-17-07-30-00-2230312" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
+     <h3>Statement on Leronlimab</h3>
+     <p class="price">Source: US Food and Drug Administration (FDA), Published on May 17, 2021</p>
+     <a href="https://www.fda.gov/drugs/drug-safety-and-availability/statement-leronlimab" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
